<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rymate Notes</string>
    <string name="title_note_detail">Note Detail</string>
    <string name="no_notes">No notes here yet.</string>
    <string name="title">Note Title</string>
    <string name="body">Note Content</string>
    <string name="confirm">Make Note</string>
    <string name="menu_insert">Add Note</string>
    <string name="menu_delete">Delete Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="note_saved">Your note was saved!</string>
    <string name="note_failed">Uh oh, something went wrong with saving your note. Report this!</string>
    <string name="dialog_delete">Are you sure you want to delete this note?</string>
    <string name="dialog_confirm">Yes</string>
    <string name="dialog_cancel">No</string>
    <string name="note_deleted">Your note was deleted!</string>
    <string name="drawer_close">Close Categories</string>
    <string name="drawer_open">Open Categories</string>
    <string name="showcase_note_title">Welcome to Rymate Notes</string>
    <string name="showcase_note_message">Press the + button to add a note. Slide from the left to
        view note categories.</string>
    <string name="menu_category">Add category</string>
    <string name="new_category">Category Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_notes_1">You have no notes yet.</string>
    <string name="no_notes_2">Create one!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="print_note">Print</string>
    <string name="menu_search">Search</string>


</resources>
