<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:notes="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/new_note"
        android:icon="@drawable/ic_action_new"
          android:title="@string/menu_insert"
        android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/edit_note"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/edit_note"
        android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/delete_note"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/menu_delete"
        android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/settings"
        android:title="@string/title_activity_settings"
        android:showAsAction="never|withText" />
</menu>